# mrpedrobraga.github.io

./: .dockerignore  CNAME  Cargo.toml  Dockerfile  README.md  Rocket.toml  fly.toml  index.html  justfile  main.css
.obsidian/: app.json  appearance.json  community-plugins.json  graph.json  types.json  workspace.json
.obsidian/snippets/: math-font.css
Astyles/: starch_main.less
_styles/: main.less  scrollbar.css  starch_main.less
apps/writer/: index.html
blog/: UI Composer - A Manifesto for Better Interfaces.md  art.md  article-01.md  article-02.md  games.md  software.md
blog/mathematica-nova/: 0-introduction.md  0. Introduction.md  1. Values.md  2-names.md  2. Names.md  3. Variables.md  4. Expressions.md  5. Rules of Rewriting.md  6. Statements.md  7. Questions.md  8-analogy.md  8. Analogy.md  logic-01.md
blog/screenplays/: fountain.md
blog/standards/: partitune.md
content/: good_morning.mdx
content/blog/: Algebraic Types.md  article-02.md  blog.md
contents/: games.html
deltarune/: index.html
extensions/: less.js
gallery/: index.html
inner_voices/: gallery.js  gallery.less  index.html  invo.less
lib/: highlight.min.js
me/: index.html  main.css
music/: config.json  index.html  mediaplayer.html  music_player.js  music_player.less
nano/: code.css  highlight_nano.js  index.html  wiki.css
pages/: art.md  base.html.tera  games.md
projects/: index.html
public/: blog.css  colors.css  docs.css  fountain.css  main.css  reset.css  software.css
secrets/: index.html
src/: api.rs  home.rs  main.rs  rebuild.rs  what.md
src/blog/: mod.rs
styles/: normalize.css  starch_main.less
templates/: base.html.hbs  base.html.tera  blog-base.html.hbs  blog.html.hbs  inner-voices-home.html.hbs  inner-voices-not-found.html.hbs  inner_voices_home.html.hbs  software.html.hbs
undertale/: index.html
(+211 files in other folders)
